test/fail/assert_fail2.avm
push int8(0)
assert int8(1)
exit